<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <LinearLayout
      android:id="@+id/activity_beacon_eddystone_scan"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/activity_padding"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/kontakt_cloud_description"
        />

    <Button
        android:id="@+id/get_devices_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/request_devices"
        />

    <Button
        android:id="@+id/get_configs_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_configs"
        />

    <Button
        android:id="@+id/get_managers_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_managers"
        />

    <ProgressBar
        android:id="@+id/scanning_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        >

      <TextView
          android:id="@+id/status_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          />

      <ProgressBar
          android:id="@id/progress_bar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:visibility="gone"
          />

    </FrameLayout>

  </LinearLayout>
</ScrollView>
