<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_foreground_scan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/foreground_scan_description"
      />

  <Button
      android:id="@+id/start_scan_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/start_scanning_service"
      />

  <Button
      android:id="@+id/stop_scan_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/stop_scanning_service"
      />

  <ProgressBar
      android:id="@+id/scanning_progress"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="16dp"
      android:visibility="gone"
      />

  <TextView
      android:id="@+id/status_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_gravity="center_horizontal"
      android:gravity="center"
      tools:text="Devices discovered: 0"
      />

</LinearLayout>
